# schema_builder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activity_table_ddl.txt  pylintrc  pyproject.toml  setup.py
.circleci/: config.yml
schema_builder/: __init__.py  builder_ddl.py  builder_table_list.py  ddl_file_helpers.py  ddl_table_helpers.py  schema_builder.py  schema_helpers.py  source_ddl_builder.py
tests/: api_builder_test.py  conftest.py  ddl_builder_test.py  schema_builder_test.py  table_builder_test.py  test_ddl_builder.py  test_schema_builder.py  test_table_builder.py
tests/data/: nested_json.json
