[tool.poetry]
name = "schema-builder"
version = "0.1.0"
description = ""
authors = ["Michael Cooper <macoop2363@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pep8 = "^1.7.1"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
